syntax = "proto3";

package social.post.v1;


// enum definitions

enum MediaType {
  MEDIA_TYPE_UNSPECIFIED = 0;
  IMAGE = 1;
  VIDEO = 2;
}

// Message definitions

message User {
  string id = 1;
  string name = 2;
  string avatar = 3;
  optional string title = 4;
}

message ImageTransform {
  double rotation = 1;
  bool flipH = 2;
  bool flipV = 3;
  double zoom = 4;
  double straighten = 5;
  string aspectRatio = 6;
  string filter = 7;
  double brightness = 8;
  double contrast = 9;
  double saturation = 10;
  double temperature = 11;
  double highlights = 12;
  double shadows = 13;
  string altText = 14;
}

message VideoTransform {
  // Add video transform fields if needed
}

message PollOption {
  int32 id = 1;
  string text = 2;
}

message Poll {
  string question = 1;
  repeated PollOption options = 2;
  int32 durationDays = 3;
}

message Transform {
  oneof data {
    ImageTransform image = 1;
    VideoTransform video = 2;
  }
}

message Media {
  string id = 1;
  string type = 2;
  string name = 3;
  string url = 4;
  repeated User taggedUsers = 5;
  Transform transform = 6;
}

message Attachments {
  string id = 1;
  optional string postId = 2;
  MediaType type = 3;
  string url = 4;
  string createdAt = 5; 
}

message FeedUserProfileDetiles {
  string username = 1;
  string name = 2;
  string avatar = 3;
}

message ListPosts {
  string id = 1;
  string userId = 2;
  string type = 3;
  string content = 4;
  repeated string tags = 5;
  repeated Media imageMedia = 6;
  repeated Media videoMedia = 7;
  string visibility = 8;
  string commentControl = 9;
  string createdAt = 10; // store as ISO string or timestamp
  string updatedAt = 11; // store as ISO string or timestamp
  FeedUserProfileDetiles user = 12;
}

message Post {
  string id = 1;
  string content = 2;
  string userId = 3;
  string createdAt = 4;
  FeedUserProfileDetiles user = 5;
}


// Request & Response

message CreatePostRequest {
  string content = 1;
  repeated Media media = 2;
  optional Poll poll = 3;
  string visibility = 4;
  string commentControl = 5;
  string type = 6;
  string userId = 7;
}

message CreatePostResponse {
  string postId  = 1;
  string message = 2;
}

message ListPostsRequest {
  optional string pageParam = 1;
}

message ListPostsResponse{
  repeated Post pages  = 1;
  optional string nextCursor = 2;
}

message UploadMediaRequest {
  string url = 1;
  string type = 2;
}

message UploadMediaResponse {
  string mediaId = 1;
}

message SubmitPostRequest {
  string content = 1;
  string userId = 2;
}

message SubmitPostResponse {
  string id = 1;
  string content = 2;
  string userId = 3;
}

message DeletePostRequest {
  string postId = 1;
}

message DeletePostResponse {
  string id = 1;
  string content = 2;
  string userId = 3;
  string createdAt = 4;
}



// Service definition

service PostService {
  rpc CreatePost (CreatePostRequest) returns (CreatePostResponse);
  rpc ListPosts (ListPostsRequest) returns (ListPostsResponse);
  rpc UploadMedia (UploadMediaRequest) returns (UploadMediaResponse);
  rpc SubmitPost (SubmitPostRequest) returns (SubmitPostResponse);
  rpc DeletePost (DeletePostRequest) returns (DeletePostResponse);
}